--- a/.github/workflows/docker_action.yaml
+++ b/.github/workflows/docker_action.yaml
@@ -29,6 +29,7 @@ jobs:
           sudo apt-get install -y texlive-latex-recommended
           sudo apt-get install -y texlive-xetex
           sudo apt-get install -y texlive-fonts-extra
+          sudo apt-get install -y texlive-academicons
      - name: render the curriculum vitae
        run: |
          Rscript -e "print(getwd())"
